refactor: Architecture modulaire complète avec 12 nouveaux modules d'émulation
Refactorisation majeure de EngineExports.cs en architecture modulaire avec création de 12 modules dédiés suivant le pattern Init(void** native).

Modules créés (20 fichiers, ~2600 lignes) :
- Audio/ : AudioDevice, AudioMixBuffer, AudioMixDeviceBuffers, DspPreset (OpenAL via Silk.NET)
- Camera/ : CameraRenderer (CCameraRenderer functions)
- Common/ : HandleManager (gestion centralisée des handles émulés)
- Engine/ : EngineGlue (Glue_Resources_Get* functions)
- Material/ : MaterialSystem (MaterialSystem2, IMaterial2 avec BindingPtr via HandleManager)
- Model/ : ModelSystem (CModel functions)
- Platform/ : PlatformFunctions (Plat_*, SourceEngine*, OpenGL init partagé)
- RenderAttributes/ : RenderAttributes (CRenderAttributes)
- Rendering/ : RenderDevice (40+ fonctions g_pRenderDevice_*), BasicShaders, EmulatedRenderContext/SceneView/SceneLayer
- Resource/ : ResourceSystem (g_pRsrcSystm_*), ResourceCompilerSystem (g_pRsrcCmplrSyst_*)
- Steam/ : SteamAPI (globalSteam_* functions)
- Texture/ : TextureSystem (CTextureBase_*, FindOrCreateTexture2)

Changements principaux :
- EngineExports.cs : Point d'entrée modulaire appelant tous les Init() dans l'ordre de dépendances
- HandleManager centralisé : Gestion thread-safe de tous les objets émulés avec BindingPtr
- plan.md : Documentation complète (4396 lignes) avec règles strictes contre les placeholders
- Règle stricte : Tous les stubs utilisent throw NotImplementedException au lieu de return default pour traçage runtime
- OpenGL init : Déplacé vers PlatformFunctions.SourceEngineInit avec état partagé via GetGL()/GetGlfw()/GetWindowHandle()
- Signatures corrigées : RenderDevice, MaterialSystem alignés avec Interop.Engine.cs

Impact :
- ~2600 lignes de code modulaire organisé
- 12 modules indépendants facilitant maintenance et tests
- Traçage runtime amélioré avec NotImplementedException explicites
- Architecture prête pour implémentation progressiv

--- a/src/Sbox.Engine.Emulation/Sbox.Engine.Emulation.csproj
+++ b/src/Sbox.Engine.Emulation/Sbox.Engine.Emulation.csproj
@@ -4,11 +4,13 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
     <PublishAot>true</PublishAot>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <OutputType>Library</OutputType>
     <NativeLib>Shared</NativeLib>
     <SelfContained>true</SelfContained>
+    <InternalsVisibleTo>Sbox.Engine.Emulation.Tests</InternalsVisibleTo>
   </PropertyGroup>
 
   <ItemGroup>
@@ -26,6 +28,95 @@
     <PackageReference Include="BepuPhysics" Version="2.5.0-beta.27" />
     <PackageReference Include="BepuUtilities" Version="2.5.0-beta.27" />
     <ProjectReference Include="../../engine/Sandbox.Engine/Sandbox.Engine.csproj" />
+    <ProjectReference Include="../../engine/Sandbox.System/Sandbox.System.csproj" />
+  </ItemGroup>
+
+  <!-- Build libyogacore.a if needed -->
+  <Target Name="BuildYogaStaticLib" BeforeTargets="BuildLibYogaCore">
+    <PropertyGroup>
+      <YogaDir>$(MSBuildThisFileDirectory)../yoga</YogaDir>
+      <YogaBuildDir>$(YogaDir)/build</YogaBuildDir>
+      <YogaStaticLibPath>$(YogaBuildDir)/yoga/libyogacore.a</YogaStaticLibPath>
+      <YogaBuildScript>$(YogaDir)/build_yoga.sh</YogaBuildScript>
+    </PropertyGroup>
+    
+    <!-- Build libyogacore.a if it doesn't exist -->
+    <Exec Command="bash $(YogaBuildScript)" 
+          WorkingDirectory="$(YogaDir)"
+          Condition="!Exists('$(YogaStaticLibPath)')"
+          ContinueOnError="false" />
+    
+    <Error Text="libyogacore.a not found after build. Please check the build_yoga.sh script." 
+           Condition="!Exists('$(YogaStaticLibPath)')" />
+  </Target>
+  
+  <!-- Build libyogacore.so from YogaWrapper.c and libyogacore.a -->
+  <Target Name="BuildLibYogaCore" BeforeTargets="BeforeBuild" DependsOnTargets="BuildYogaStaticLib">
+    <PropertyGroup>
+      <YogaDir>$(MSBuildThisFileDirectory)../yoga</YogaDir>
+      <YogaBuildDir>$(YogaDir)/build</YogaBuildDir>
+      <YogaStaticLibPath>$(YogaBuildDir)/yoga/libyogacore.a</YogaStaticLibPath>
+      <YogaSoPath>$(YogaBuildDir)/yoga/libyogacore.so</YogaSoPath>
+      <YogaWrapperPath>$(MSBuildThisFileDirectory)YogaWrapper.c</YogaWrapperPath>
+    </PropertyGroup>
+    
+    <!-- Check if we need to rebuild libyogacore.so -->
+    <PropertyGroup>
+      <ShouldBuildYogaSo>false</ShouldBuildYogaSo>
+      <ShouldBuildYogaSo Condition="!Exists('$(YogaSoPath)')">true</ShouldBuildYogaSo>
+    </PropertyGroup>
+    
+    <!-- Check if static lib is newer than .so -->
+    <PropertyGroup Condition="Exists('$(YogaSoPath)') And Exists('$(YogaStaticLibPath)')">
+      <StaticLibTicks>$([System.IO.File]::GetLastWriteTime('$(YogaStaticLibPath)').Ticks)</StaticLibTicks>
+      <SoTicks>$([System.IO.File]::GetLastWriteTime('$(YogaSoPath)').Ticks)</SoTicks>
+      <ShouldBuildYogaSo Condition="$(StaticLibTicks) &gt; $(SoTicks)">true</ShouldBuildYogaSo>
+    </PropertyGroup>
+    
+    <!-- Check if wrapper is newer than .so -->
+    <PropertyGroup Condition="Exists('$(YogaSoPath)') And Exists('$(YogaWrapperPath)')">
+      <WrapperTicks>$([System.IO.File]::GetLastWriteTime('$(YogaWrapperPath)').Ticks)</WrapperTicks>
+      <SoTicks2>$([System.IO.File]::GetLastWriteTime('$(YogaSoPath)').Ticks)</SoTicks2>
+      <ShouldBuildYogaSo Condition="$(WrapperTicks) &gt; $(SoTicks2)">true</ShouldBuildYogaSo>
+    </PropertyGroup>
+    
+    <!-- Compile libyogacore.so using gcc -->
+    <Exec Command="gcc -shared -fPIC -o &quot;$(YogaSoPath)&quot; &quot;$(YogaWrapperPath)&quot; &quot;$(YogaStaticLibPath)&quot; -I&quot;$(YogaDir)&quot; -std=c11 -Wall -Wextra" 
+          Condition="$(ShouldBuildYogaSo)"
+          ContinueOnError="false" />
+    
+    <Message Text="Built libyogacore.so: $(YogaSoPath)" 
+             Condition="$(ShouldBuildYogaSo)" />
+    <Message Text="Skipping libyogacore.so build (up to date)" 
+             Condition="!$(ShouldBuildYogaSo)" />
+    
+    <Error Text="libyogacore.so not found after build." 
+           Condition="!Exists('$(YogaSoPath)')" />
+  </Target>
+  
+  <!-- Copy libyogacore.so to output directory after publish -->
+  <Target Name="CopyLibYogaCore" AfterTargets="Publish" DependsOnTargets="BuildLibYogaCore">
+    <PropertyGroup>
+      <YogaDir>$(MSBuildThisFileDirectory)../yoga</YogaDir>
+      <YogaSoPath>$(YogaDir)/build/yoga/libyogacore.so</YogaSoPath>
+      <OutputYogaSoPath>$(PublishDir)libyogacore.so</OutputYogaSoPath>
+    </PropertyGroup>
+    
+    <Copy SourceFiles="$(YogaSoPath)" 
+          DestinationFiles="$(OutputYogaSoPath)" 
+          Condition="Exists('$(YogaSoPath)')"
+          SkipUnchangedFiles="true" />
+    
+    <Message Text="Copied libyogacore.so to $(OutputYogaSoPath)" 
+             Condition="Exists('$(YogaSoPath)')" />
+    
+    <Error Text="libyogacore.so not found at $(YogaSoPath). Build may have failed." 
+           Condition="!Exists('$(YogaSoPath)')" />
+  </Target>
+  
+  <!-- Exclude test file from compilation -->
+  <ItemGroup>
+    <Compile Remove="EngineExports_test.cs" />
   </ItemGroup>
 
 </Project>
